--- a/css/donate.css
+++ b/css/donate.css
@@ -1,7 +1,7 @@
 .version.donate /* version checker */
 {
-	color: #00001B;
-	background-color: #89C4C1;
+	color: #000015;
+	background-color: #C9E4DF;
 }
 
 #muse_css_mq
@@ -443,12 +443,12 @@
 
 #u1225-23
 {
-	z-index: 65;
+	z-index: 69;
 	width: 782px;
 	min-height: 323px;
 	background-color: transparent;
-	line-height: 19px;
 	font-size: 16px;
+	line-height: 19px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
@@ -473,7 +473,7 @@
 
 #u1235
 {
-	z-index: 88;
+	z-index: 92;
 	width: 118px;
 	min-height: 33px;
 	border-width: 0px;
@@ -537,8 +537,10 @@
 #u3093
 {
 	z-index: 3;
-	width: 942px;
-	padding-bottom: 29px;
+	width: 862px;
+	padding-left: 80px;
+	padding-top: 30px;
+	padding-bottom: 3px;
 	position: relative;
 	margin-right: -10000px;
 }
@@ -549,9 +551,6 @@
 	width: 782px;
 	min-height: 19px;
 	position: relative;
-	margin-right: -10000px;
-	margin-top: 30px;
-	left: 80px;
 }
 
 #u3252-6:hover
@@ -560,7 +559,26 @@
 	padding-bottom: 0px;
 	min-height: 19px;
 	width: 782px;
-	margin: 30px -10000px 0px 0px;
+	margin: 0px;
+}
+
+#u5246-4
+{
+	z-index: 65;
+	width: 104px;
+	min-height: 19px;
+	margin-left: 758px;
+	margin-top: 8px;
+	position: relative;
+}
+
+#u5246-4:hover
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 19px;
+	width: 104px;
+	margin: 8px 0px 0px 758px;
 }
 
 #u4305
