--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,7 +1,7 @@
 .version.portfolio /* version checker */
 {
-	color: #00001F;
-	background-color: #FB65F0;
+	color: #00001C;
+	background-color: #31C624;
 }
 
 #muse_css_mq
@@ -435,7 +435,7 @@
 
 #u1760-5
 {
-	z-index: 65;
+	z-index: 69;
 	width: 782px;
 	min-height: 26px;
 	background-color: transparent;
@@ -458,7 +458,7 @@
 
 #u3841-9
 {
-	z-index: 73;
+	z-index: 77;
 	width: 782px;
 	min-height: 70px;
 	background-color: transparent;
@@ -515,7 +515,7 @@
 
 #u3750
 {
-	z-index: 72;
+	z-index: 76;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -543,7 +543,7 @@
 
 #u4546-4
 {
-	z-index: 100;
+	z-index: 104;
 	width: 239px;
 	min-height: 151px;
 	background-color: transparent;
@@ -575,7 +575,7 @@
 
 #u3749
 {
-	z-index: 71;
+	z-index: 75;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -602,7 +602,7 @@
 
 #u4549-4
 {
-	z-index: 104;
+	z-index: 108;
 	width: 245px;
 	min-height: 151px;
 	background-color: transparent;
@@ -619,7 +619,7 @@
 
 #u4349
 {
-	z-index: 98;
+	z-index: 102;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -646,7 +646,7 @@
 
 #u4552-4
 {
-	z-index: 108;
+	z-index: 112;
 	width: 245px;
 	min-height: 151px;
 	background-color: transparent;
@@ -671,7 +671,7 @@
 
 #u3748
 {
-	z-index: 70;
+	z-index: 74;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -696,7 +696,7 @@
 
 #u4555-4
 {
-	z-index: 112;
+	z-index: 116;
 	width: 245px;
 	min-height: 156px;
 	background-color: transparent;
@@ -742,7 +742,7 @@
 
 #u4522
 {
-	z-index: 99;
+	z-index: 103;
 	width: 68px;
 	min-height: 51px;
 	border-width: 0px;
@@ -775,7 +775,7 @@
 
 #u3844-4
 {
-	z-index: 82;
+	z-index: 86;
 	width: 782px;
 	min-height: 37px;
 	background-color: transparent;
@@ -799,7 +799,7 @@
 
 #u3847
 {
-	z-index: 86;
+	z-index: 90;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -825,7 +825,7 @@
 
 #u4558-4
 {
-	z-index: 116;
+	z-index: 120;
 	width: 245px;
 	min-height: 156px;
 	background-color: transparent;
@@ -842,7 +842,7 @@
 
 #u3850
 {
-	z-index: 87;
+	z-index: 91;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -869,7 +869,7 @@
 
 #u4561-4
 {
-	z-index: 120;
+	z-index: 124;
 	width: 245px;
 	min-height: 156px;
 	background-color: transparent;
@@ -886,7 +886,7 @@
 
 #u3853
 {
-	z-index: 88;
+	z-index: 92;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -913,7 +913,7 @@
 
 #u4564-4
 {
-	z-index: 124;
+	z-index: 128;
 	width: 245px;
 	min-height: 156px;
 	background-color: transparent;
@@ -946,7 +946,7 @@
 
 #u4608
 {
-	z-index: 132;
+	z-index: 136;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -973,7 +973,7 @@
 
 #u4619-4
 {
-	z-index: 133;
+	z-index: 137;
 	width: 245px;
 	min-height: 155px;
 	background-color: transparent;
@@ -990,7 +990,7 @@
 
 #u5025
 {
-	z-index: 137;
+	z-index: 141;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1030,7 +1030,7 @@
 
 #u5026-4
 {
-	z-index: 138;
+	z-index: 142;
 	width: 245px;
 	min-height: 155px;
 	background-color: transparent;
@@ -1056,7 +1056,7 @@
 
 #u5168-4
 {
-	z-index: 146;
+	z-index: 150;
 	width: 782px;
 	min-height: 34px;
 	background-color: transparent;
@@ -1080,7 +1080,7 @@
 
 #u5167
 {
-	z-index: 145;
+	z-index: 149;
 	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1108,7 +1108,7 @@
 
 #u5169-4
 {
-	z-index: 150;
+	z-index: 154;
 	width: 238px;
 	min-height: 238px;
 	border-style: solid;
@@ -1129,7 +1129,7 @@
 
 #u5170
 {
-	z-index: 154;
+	z-index: 158;
 	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1157,7 +1157,7 @@
 
 #u5171-4
 {
-	z-index: 155;
+	z-index: 159;
 	width: 238px;
 	min-height: 238px;
 	border-style: solid;
@@ -1178,7 +1178,7 @@
 
 #u5172
 {
-	z-index: 159;
+	z-index: 163;
 	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1206,7 +1206,7 @@
 
 #u5173-4
 {
-	z-index: 160;
+	z-index: 164;
 	width: 238px;
 	min-height: 238px;
 	border-style: solid;
@@ -1234,7 +1234,7 @@
 
 #u5204
 {
-	z-index: 164;
+	z-index: 168;
 	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1262,7 +1262,7 @@
 
 #u5205-4
 {
-	z-index: 165;
+	z-index: 169;
 	width: 238px;
 	min-height: 238px;
 	border-style: solid;
@@ -1283,7 +1283,7 @@
 
 #u5210
 {
-	z-index: 169;
+	z-index: 173;
 	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1311,7 +1311,7 @@
 
 #u5211-4
 {
-	z-index: 170;
+	z-index: 174;
 	width: 238px;
 	min-height: 238px;
 	border-style: solid;
@@ -1332,7 +1332,7 @@
 
 #u5216
 {
-	z-index: 174;
+	z-index: 178;
 	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1372,7 +1372,7 @@
 
 #u5217-4
 {
-	z-index: 175;
+	z-index: 179;
 	width: 238px;
 	min-height: 238px;
 	border-style: solid;
@@ -1416,7 +1416,7 @@
 
 #u4276-4
 {
-	z-index: 89;
+	z-index: 93;
 	width: 782px;
 	min-height: 37px;
 	background-color: transparent;
@@ -1433,7 +1433,7 @@
 
 #u4277
 {
-	z-index: 93;
+	z-index: 97;
 	width: 245px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1471,7 +1471,7 @@
 
 #u4570-4
 {
-	z-index: 128;
+	z-index: 132;
 	width: 241px;
 	min-height: 158px;
 	background-color: transparent;
@@ -1511,7 +1511,7 @@
 
 #u4278-4
 {
-	z-index: 94;
+	z-index: 98;
 	width: 245px;
 	min-height: 23px;
 	background-color: #FFFFFF;
@@ -1529,7 +1529,7 @@
 
 #u5106-3
 {
-	z-index: 142;
+	z-index: 146;
 	width: 782px;
 	min-height: 24px;
 	background-color: transparent;
@@ -1552,8 +1552,10 @@
 #u3093
 {
 	z-index: 3;
-	width: 942px;
-	padding-bottom: 29px;
+	width: 862px;
+	padding-left: 80px;
+	padding-top: 30px;
+	padding-bottom: 3px;
 	position: relative;
 	margin-right: -10000px;
 }
@@ -1564,9 +1566,6 @@
 	width: 782px;
 	min-height: 19px;
 	position: relative;
-	margin-right: -10000px;
-	margin-top: 30px;
-	left: 80px;
 }
 
 #u3252-6:hover
@@ -1575,7 +1574,26 @@
 	padding-bottom: 0px;
 	min-height: 19px;
 	width: 782px;
-	margin: 30px -10000px 0px 0px;
+	margin: 0px;
+}
+
+#u5246-4
+{
+	z-index: 65;
+	width: 104px;
+	min-height: 19px;
+	margin-left: 758px;
+	margin-top: 8px;
+	position: relative;
+}
+
+#u5246-4:hover
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 19px;
+	width: 104px;
+	margin: 8px 0px 0px 758px;
 }
 
 #u4305
