--- a/css/contact-thanks.css
+++ b/css/contact-thanks.css
@@ -1,7 +1,7 @@
 .version.contact_thanks /* version checker */
 {
-	color: #00000F;
-	background-color: #F0D989;
+	color: #0000E4;
+	background-color: #03D399;
 }
 
 #muse_css_mq
@@ -455,14 +455,14 @@
 
 #u1289-10
 {
-	z-index: 65;
+	z-index: 69;
 	width: 782px;
 	min-height: 56px;
 	background-color: transparent;
 	color: #9E9E9E;
-	line-height: 19px;
 	text-align: center;
 	font-size: 16px;
+	line-height: 19px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
@@ -503,8 +503,10 @@
 #u3093
 {
 	z-index: 3;
-	width: 942px;
-	padding-bottom: 29px;
+	width: 862px;
+	padding-left: 80px;
+	padding-top: 30px;
+	padding-bottom: 3px;
 	position: relative;
 	margin-right: -10000px;
 }
@@ -515,9 +517,6 @@
 	width: 782px;
 	min-height: 19px;
 	position: relative;
-	margin-right: -10000px;
-	margin-top: 30px;
-	left: 80px;
 }
 
 #u3252-6:hover
@@ -526,7 +525,26 @@
 	padding-bottom: 0px;
 	min-height: 19px;
 	width: 782px;
-	margin: 30px -10000px 0px 0px;
+	margin: 0px;
+}
+
+#u5246-4
+{
+	z-index: 65;
+	width: 104px;
+	min-height: 19px;
+	margin-left: 758px;
+	margin-top: 8px;
+	position: relative;
+}
+
+#u5246-4:hover
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 19px;
+	width: 104px;
+	margin: 8px 0px 0px 758px;
 }
 
 #u4305
