--- a/css/privacy-policy.css
+++ b/css/privacy-policy.css
@@ -1,7 +1,7 @@
 .version.privacy_policy /* version checker */
 {
-	color: #000016;
-	background-color: #84BA66;
+	color: #0000F6;
+	background-color: #1D09DB;
 }
 
 #muse_css_mq
@@ -443,7 +443,7 @@
 
 #u1251-4
 {
-	z-index: 128;
+	z-index: 132;
 	width: 216px;
 	min-height: 34px;
 	background-color: transparent;
@@ -460,7 +460,7 @@
 
 #u1252
 {
-	z-index: 132;
+	z-index: 136;
 	width: 782px;
 	height: 16px;
 	border-style: solid;
@@ -475,7 +475,7 @@
 
 #u1250-63
 {
-	z-index: 65;
+	z-index: 69;
 	width: 782px;
 	min-height: 834px;
 	background-color: transparent;
@@ -564,8 +564,10 @@
 #u3093
 {
 	z-index: 3;
-	width: 942px;
-	padding-bottom: 29px;
+	width: 862px;
+	padding-left: 80px;
+	padding-top: 30px;
+	padding-bottom: 3px;
 	position: relative;
 	margin-right: -10000px;
 }
@@ -576,9 +578,6 @@
 	width: 782px;
 	min-height: 19px;
 	position: relative;
-	margin-right: -10000px;
-	margin-top: 30px;
-	left: 80px;
 }
 
 #u3252-6:hover
@@ -587,7 +586,26 @@
 	padding-bottom: 0px;
 	min-height: 19px;
 	width: 782px;
-	margin: 30px -10000px 0px 0px;
+	margin: 0px;
+}
+
+#u5246-4
+{
+	z-index: 65;
+	width: 104px;
+	min-height: 19px;
+	margin-left: 758px;
+	margin-top: 8px;
+	position: relative;
+}
+
+#u5246-4:hover
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 19px;
+	width: 104px;
+	margin: 8px 0px 0px 758px;
 }
 
 #u4305
