--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,7 +1,7 @@
 .version.portfolio /* version checker */
 {
-	color: #0000FA;
-	background-color: #B03514;
+	color: #00000B;
+	background-color: #CBB1A3;
 }
 
 #muse_css_mq
@@ -13,12 +13,11 @@
 {
 	z-index: 1;
 	width: 942px;
-	min-height: 760.6500000000001px;
+	min-height: 761px;
 	background-image: none;
 	border-width: 0px;
 	border-color: #000000;
 	background-color: #333333;
-	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -1061,18 +1060,6 @@
 	background-size: cover;
 }
 
-#u3750:hover::before,#u3749:hover::before,#u4349:hover::before,#u3748:hover::before,#u3847:hover::before,#u3850:hover::before,#u3853:hover::before,#u4608:hover::before,#u5025:hover::before,#u5249:hover::before
-{
-	content: "";
-	position: absolute;
-	pointer-events: none;
-	top: -1px;
-	left: -1px;
-	bottom: -1px;
-	right: -1px;
-	box-shadow: inset -10px 58px 99px rgba(255,255,255,0.75), inset 10px -58px 99px rgba(0,0,0,0.75);
-}
-
 #u5250-4
 {
 	z-index: 184;
@@ -1099,6 +1086,69 @@
 	margin: -1px -10000px 0px 0px;
 }
 
+#u5266
+{
+	z-index: 188;
+	width: 244px;
+	-pie-box-shadow: 6px 6px 8px #7F7F7F;
+	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
+	border-style: solid;
+	border-width: 1px;
+	border-color: #E792C4;
+	margin-left: 81px;
+	margin-top: 26px;
+	position: relative;
+	background: #7F7F7F url("../images/snowflakes-coloured-liner.jpg") no-repeat center center;
+	background-size: cover;
+}
+
+#u5266:hover
+{
+	background-repeat: no-repeat;
+	background-position: center center;
+	width: 244px;
+	min-height: 0px;
+	margin: 26px 0px 0px 81px;
+	background-size: cover;
+}
+
+#u3750:hover::before,#u3749:hover::before,#u4349:hover::before,#u3748:hover::before,#u3847:hover::before,#u3850:hover::before,#u3853:hover::before,#u4608:hover::before,#u5025:hover::before,#u5249:hover::before,#u5266:hover::before
+{
+	content: "";
+	position: absolute;
+	pointer-events: none;
+	top: -1px;
+	left: -1px;
+	bottom: -1px;
+	right: -1px;
+	box-shadow: inset -10px 58px 99px rgba(255,255,255,0.75), inset 10px -58px 99px rgba(0,0,0,0.75);
+}
+
+#u5267-4
+{
+	z-index: 189;
+	width: 245px;
+	min-height: 155px;
+	background-color: transparent;
+	line-height: 20px;
+	text-align: center;
+	font-size: 17px;
+	font-family: bitter, serif;
+	font-weight: 400;
+	position: relative;
+	margin-right: -10000px;
+	left: -3px;
+}
+
+#u5267-4:hover
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 155px;
+	width: 245px;
+	margin: 0px -10000px 0px 0px;
+}
+
 #u5168-4
 {
 	z-index: 150;
@@ -1111,16 +1161,16 @@
 	font-size: 25px;
 	font-family: bitter, serif;
 	font-weight: 400;
-	margin-left: 79px;
-	margin-top: 65px;
+	margin-left: 81px;
+	margin-top: 11px;
 	position: relative;
 }
 
 #pu5167
 {
 	width: 0.01px;
-	margin-left: 77px;
-	margin-top: 11px;
+	margin-left: 79px;
+	margin-top: 12px;
 }
 
 #u5167
@@ -1273,8 +1323,8 @@
 #pu5204
 {
 	width: 0.01px;
-	margin-left: 77px;
-	margin-top: 26px;
+	margin-left: 79px;
+	margin-top: 25px;
 }
 
 #u5204
@@ -1449,8 +1499,8 @@
 {
 	color: #FFFFFF;
 	visibility: inherit;
-	padding-top: 105px;
 	font-size: 19px;
+	padding-top: 105px;
 }
 
 #u5169-2,#u5171-2,#u5173-2,#u5205-2,#u5211-2,#u5217-2
@@ -1471,7 +1521,7 @@
 	font-size: 25px;
 	font-family: bitter, serif;
 	font-weight: 400;
-	margin-left: 80px;
+	margin-left: 82px;
 	margin-top: 58px;
 	position: relative;
 }
@@ -1485,7 +1535,7 @@
 	border-width: 0px;
 	border-color: transparent;
 	padding-bottom: 2px;
-	margin-left: 348px;
+	margin-left: 350px;
 	margin-top: 18px;
 	position: relative;
 	background: #FFFFFF url("../images/rss-feed.png") no-repeat center top;
@@ -1498,7 +1548,7 @@
 	background-position: center top;
 	width: 245px;
 	min-height: 0px;
-	margin: 18px 0px 0px 348px;
+	margin: 18px 0px 0px 350px;
 	background-size: contain;
 }
 
@@ -1540,15 +1590,15 @@
 	margin: 3px -10000px 0px 0px;
 }
 
-#u4546-4:hover p,#u4549-4:hover p,#u4552-4:hover p,#u4555-4:hover p,#u4558-4:hover p,#u4561-4:hover p,#u4564-4:hover p,#u4619-4:hover p,#u5026-4:hover p,#u5250-4:hover p,#u4570-4:hover p
+#u4546-4:hover p,#u4549-4:hover p,#u4552-4:hover p,#u4555-4:hover p,#u4558-4:hover p,#u4561-4:hover p,#u4564-4:hover p,#u4619-4:hover p,#u5026-4:hover p,#u5250-4:hover p,#u5267-4:hover p,#u4570-4:hover p
 {
 	color: #FFFFFF;
 	visibility: inherit;
-	padding-top: 80px;
 	font-size: 19px;
+	padding-top: 80px;
 }
 
-#u4549-2,#u4552-2,#u4555-2,#u4558-2,#u4561-2,#u4564-2,#u4619-2,#u5026-2,#u5250-2,#u4570-2
+#u4549-2,#u4552-2,#u4555-2,#u4558-2,#u4561-2,#u4564-2,#u4619-2,#u5026-2,#u5250-2,#u5267-2,#u4570-2
 {
 	padding-top: 60px;
 	visibility: hidden;/* 100% transparent text is hidden */
@@ -1566,9 +1616,7 @@
 	font-size: 18px;
 	font-family: bitter, serif;
 	font-weight: 400;
-	margin-left: 348px;
-	top: -1px;
-	margin-bottom: -1px;
+	margin-left: 350px;
 	position: relative;
 }
 
@@ -1584,7 +1632,7 @@
 	font-size: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
-	margin-left: 80px;
+	margin-left: 82px;
 	margin-top: 29px;
 	position: relative;
 }
