--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,7 +1,7 @@
 .version.portfolio /* version checker */
 {
-	color: #00000B;
-	background-color: #CBB1A3;
+	color: #0000EC;
+	background-color: #7AF8A4;
 }
 
 #muse_css_mq
@@ -778,8 +778,8 @@
 	width: 782px;
 	min-height: 37px;
 	background-color: transparent;
-	line-height: 30px;
 	color: #E792C4;
+	line-height: 30px;
 	text-align: center;
 	font-size: 25px;
 	font-family: bitter, serif;
@@ -792,7 +792,7 @@
 #pu3847
 {
 	width: 0.01px;
-	margin-left: 80px;
+	margin-left: 79px;
 	margin-top: 16px;
 }
 
@@ -808,6 +808,7 @@
 	margin-bottom: -1px;
 	position: relative;
 	margin-right: -10000px;
+	margin-top: 5px;
 	background: #7F7F7F url("../images/liner-multimedia-buttons.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -818,7 +819,7 @@
 	background-position: center center;
 	width: 244px;
 	min-height: 0px;
-	margin: 0px -10000px -1px 0px;
+	margin: 5px -10000px -1px 0px;
 	background-size: cover;
 }
 
@@ -836,7 +837,7 @@
 	position: relative;
 	margin-right: -10000px;
 	margin-top: -1px;
-	left: -2px;
+	left: 1px;
 }
 
 #u3850
@@ -848,10 +849,9 @@
 	border-style: solid;
 	border-width: 1px;
 	border-color: #E792C4;
-	margin-bottom: -1px;
 	position: relative;
 	margin-right: -10000px;
-	left: 268px;
+	left: 269px;
 	background: #7F7F7F url("../images/different-genders.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -862,7 +862,7 @@
 	background-position: center center;
 	width: 244px;
 	min-height: 0px;
-	margin: 0px -10000px -1px 0px;
+	margin: 0px -10000px 0px 0px;
 	background-size: cover;
 }
 
@@ -892,10 +892,9 @@
 	border-style: solid;
 	border-width: 1px;
 	border-color: #E792C4;
-	margin-bottom: -1px;
 	position: relative;
 	margin-right: -10000px;
-	left: 536px;
+	left: 537px;
 	background: #7F7F7F url("../images/weather-liner.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -906,7 +905,7 @@
 	background-position: center center;
 	width: 244px;
 	min-height: 0px;
-	margin: 0px -10000px -1px 0px;
+	margin: 0px -10000px 0px 0px;
 	background-size: cover;
 }
 
@@ -940,7 +939,7 @@
 {
 	width: 0.01px;
 	margin-left: 80px;
-	margin-top: 26px;
+	margin-top: 21px;
 }
 
 #u4608
@@ -1046,7 +1045,7 @@
 	position: relative;
 	margin-right: -10000px;
 	left: 536px;
-	background: #7F7F7F url("../images/snowflakes-iner.jpg") no-repeat center center;
+	background: #7F7F7F url("../images/snowflakes-liner.jpg") no-repeat center center;
 	background-size: cover;
 }
 
@@ -1137,7 +1136,6 @@
 	font-weight: 400;
 	position: relative;
 	margin-right: -10000px;
-	left: -3px;
 }
 
 #u5267-4:hover
@@ -1155,8 +1153,8 @@
 	width: 782px;
 	min-height: 34px;
 	background-color: transparent;
-	line-height: 30px;
 	color: #E792C4;
+	line-height: 30px;
 	text-align: center;
 	font-size: 25px;
 	font-family: bitter, serif;
@@ -1499,8 +1497,8 @@
 {
 	color: #FFFFFF;
 	visibility: inherit;
-	font-size: 19px;
 	padding-top: 105px;
+	font-size: 19px;
 }
 
 #u5169-2,#u5171-2,#u5173-2,#u5205-2,#u5211-2,#u5217-2
@@ -1515,8 +1513,8 @@
 	width: 782px;
 	min-height: 37px;
 	background-color: transparent;
-	line-height: 30px;
 	color: #E792C4;
+	line-height: 30px;
 	text-align: center;
 	font-size: 25px;
 	font-family: bitter, serif;
@@ -1594,8 +1592,8 @@
 {
 	color: #FFFFFF;
 	visibility: inherit;
-	font-size: 19px;
 	padding-top: 80px;
+	font-size: 19px;
 }
 
 #u4549-2,#u4552-2,#u4555-2,#u4558-2,#u4561-2,#u4564-2,#u4619-2,#u5026-2,#u5250-2,#u5267-2,#u4570-2
@@ -1610,8 +1608,8 @@
 	width: 245px;
 	min-height: 23px;
 	background-color: #FFFFFF;
-	line-height: 22px;
 	color: #9E9E9E;
+	line-height: 22px;
 	text-align: center;
 	font-size: 18px;
 	font-family: bitter, serif;
@@ -1626,8 +1624,8 @@
 	width: 782px;
 	min-height: 24px;
 	background-color: transparent;
-	line-height: 24px;
 	color: #000000;
+	line-height: 24px;
 	text-align: left;
 	font-size: 20px;
 	font-family: bitter, serif;
